// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeter App Greeter component displays a default greeting 1`] = `
<div>
  <span>
    Greetings
  </span>
  <br />
  <span>
    Human
    !
  </span>
</div>
`;

exports[`Greeter App Greeter component displays an updated greeting 1`] = `
<div>
  <span>
    Howdy
  </span>
  <br />
  <span>
    pardner
    !
  </span>
</div>
`;
